--- a/package.json
+++ b/package.json
@@ -13,51 +13,53 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@vueuse/core": "^8.9.2",
-        "axios": "^0.25.0",
-        "element-plus": "^2.0.1",
+        "@vueuse/core": "^9.13.0",
+        "axios": "^1.3.4",
+        "element-plus": "^2.3.1",
         "nprogress": "^0.2.0",
-        "pinia": "^2.0.16",
+        "pinia": "^2.0.33",
         "prism-theme-vars": "^0.2.4",
-        "vue": "^3.2.25",
-        "vue-i18n": "^9.1.9",
-        "vue-router": "^4.1.2"
+        "vue": "^3.2.47",
+        "vue-i18n": "^9.2.2",
+        "vue-router": "^4.1.6"
     },
     "devDependencies": {
-        "@commitlint/cli": "^16.1.0",
-        "@commitlint/config-conventional": "^16.0.0",
-        "@iconify/json": "^2.0.29",
-        "@intlify/vite-plugin-vue-i18n": "^6.0.0",
-        "@types/node": "^17.0.10",
+        "@iconify/json": "^2.2.38",
+        "@intlify/unplugin-vue-i18n": "^0.10.0",
+        "@rollup/plugin-terser": "^0.4.0",
+        "@types/markdown-it-link-attributes": "^3.0.1",
+        "@types/node": "^18.15.5",
         "@types/nprogress": "^0.2.0",
-        "@types/svgo": "^2.6.1",
-        "@typescript-eslint/eslint-plugin": "^5.10.0",
-        "@typescript-eslint/parser": "^5.10.0",
-        "@vitejs/plugin-vue": "^3.0.1",
-        "@vitejs/plugin-vue-jsx": "2.0.0",
-        "eslint": "^8.19.0",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
+        "@vitejs/plugin-vue": "^4.1.0",
+        "eslint": "^8.36.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-vue": "^8.3.0",
-        "lint-staged": "^12.3.2",
-        "markdown-it-link-attributes": "^4.0.0",
-        "markdown-it-prism": "^2.2.2",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-vue": "^9.10.0",
+        "markdown-it-link-attributes": "^4.0.1",
+        "markdown-it-prism": "^2.3.0",
         "nodemon": "^2.0.22",
-        "pnpm": "^7.9.0",
-        "prettier": "^2.5.1",
-        "sass": "^1.49.0",
-        "typescript": "^4.4.4",
-        "unplugin-auto-import": "^0.9.2",
-        "unplugin-icons": "^0.14.8",
-        "unplugin-vue-components": "^0.21.1",
-        "vite": "^3.0.5",
-        "vite-plugin-fonts": "^0.6.0",
-        "vite-plugin-vue-markdown": "^0.21.1",
+        "pnpm": "^7.30.1",
+        "sass": "^1.59.3",
+        "typescript": "^5.0.2",
+        "unplugin-auto-import": "^0.15.2",
+        "unplugin-fonts": "^1.0.0",
+        "unplugin-icons": "^0.15.3",
+        "unplugin-vue-components": "^0.24.1",
+        "vite": "^4.2.1",
+        "vite-plugin-pages": "^0.29.0",
+        "vite-plugin-pwa": "^0.14.4",
+        "vite-plugin-vue-layouts": "^0.8.0",
+        "vite-plugin-vue-markdown": "^0.22.4",
         "vite-plugin-wasm-pack": "^0.1.12",
-        "vite-plugin-windicss": "^1.8.7",
-        "vite-svg-loader": "^3.4.0",
-        "vue-tsc": "^0.38.4"
+        "vite-plugin-windicss": "^1.8.10",
+        "vite-svg-loader": "^4.0.0",
+        "vue-tsc": "^1.2.0"
+    },
+    "overrides": {
+        "*": {
+            "json5": "2.2.2"
+        }
     }
 }
