--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 cfg-if = "1.0"
 wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_repr = "0.1"
+gloo-utils = { version = "0.1", features = ["serde"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
